--- a/steveBioIndex.html
+++ b/steveBioIndex.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="C:/Users/archi/Desktop/codingbootcamp/revisedPortfolio/revised-bio/assets/css/steveBioStyle.css">
 </head>
 <body>   
-    <div id='topBar'></div> 
+    <div id='topBar'></div> <!--blank colored bar (aesthetic)-->
     <div class="container" id='bioMainDiv'>
         <div class="row" id='bioContainerRow'>
             <div class="col-lg-3" id='picBtnsBox'> 
@@ -54,9 +54,9 @@
             </div>
         </div>
     </div>
-    <div id='btmBar'>
+    <div id='btmBar'> <!--blank colored bar (aesthetic)-->
         </div>
-        <div id='btmBar1'>  
+        <div id='btmBar1'>  <!--colored bar with copyright text(aesthetic)-->
             <p>Copyright Steve Merrell 2018</p>         
         </div>
 
